# uconfig

./: .gitignore  README.md  users
.github/: combine-artifacts.sh
.github/workflows/: build-openwrt.yml  build.yml
cli/: uconfig.uc
cli/modules/: dhcp.uc  local.uc  radius.uc  uconfig.uc
openwrt/uconfig/: Makefile  host-pip-requirements.txt
openwrt/ufp/: Makefile
openwrt/ulldpd/: Makefile
openwrt/unet-rrm/: Makefile
openwrt/uwsd/: Makefile
openwrt/wifi-dynamic/: Makefile
render/: generate.sh  render_config  uconfig_apply
render/docs/: uconfig-schema.html
render/examples/: default.json  dumb-ap.json  eap-local.json  ieee8021x.json  initial.json  lldp.json  mesh-batman.json  mesh-easy-agent.json  mesh-easy-hybrid.json  mesh.json  multi-psk.json  owe-ap.json  radius.json  ratelimit.json  vlan.json  wds-ap.json  wds-repeater.json  webui-managed.json  webui-setup.json  wifi-7.json
render/lib/: ethernet.uc  files.uc  ipcalc.uc  routing_table.uc  services.uc  shell.uc  wiphy.uc  zoneinfo.json
render/schema/: configurations.radius-servers.local.yml  configurations.radius-servers.server.yml  configurations.radius-servers.yml  configurations.yml  interface.easymesh-backhaul.yml  interface.easymesh-encryption.yml  interface.easymesh-fronthaul.yml  interface.ipv4.dhcp-lease.yml  interface.ipv4.yml  interface.yml  (+16 more)
render/schema-generated/: schema.json
src/: CMakeLists.txt  utils.c
websocket/: credentials.uc  devices.uc  event.uc  handler.uc  libubus.uc  modules.uc  state.uc  unet.uc  users.uc  wizard.uc
webui/: index.html
www/: agent.js  index.html
(+130 files in other folders)
